[package]
name = "updlockfiles"
version = "0.1.0"
description = "Manage lockfiles in PKGBUILDs for upstreams that don't ship them, `updpkgsums` for dependency trees (Arch Linux tooling)"
license = "GPL-3.0"
repository = "https://github.com/kpcyrd/updlockfiles"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
clap = { version = "4.0.15", features = ["derive"] }
env_logger = "0.11"
log = "0.4.17"
tempfile = "3.10.1"
